<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/bottom_nav_info"
        android:enabled="true"
        android:icon="@drawable/ic_info"
        android:title="@string/bottom_nav_info"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/bottom_nav_rates"
        android:enabled="true"
        android:icon="@drawable/ic_rates"
        android:title="@string/bottom_nav_rates"
        app:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/bottom_nav_chat"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/bottom_nav_chat"
        app:showAsAction="ifRoom"
    />
</menu>